2009-05-03 Borut Razem <borut.razem AT siol.net>

	* as/link/hc08/Makefile.in, as/link/mcs51/Makefile.in,
	  as/link/z80/Makefile.in, as/link/lk_readnl.c, as/link/lk_readnl.h,
	  as/link/lklib.c, as/link/lkrel.c, as/link/lksdcclib.c:
	  getline renamed to lk_readln to prevent conflicts with Fedora 11
	  glibc-2.9.90-19 getline;
	  see https://bugzilla.redhat.com/show_bug.cgi?id=488217

2009-05-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (processParms): fixed bug 2783061 by applying patch from
	  Keith Packard, thanks
	* support/regression/tests/bug2783061.c: new, added

2009-04-28 Borut Razem <borut.razem AT siol.net>

	* support/cpp/output.h, support/cpp/opts-common.c,
	  support/cpp/c-ppoutput.c, support/cpp/cppdefault.c,
	  support/cpp/system.h, support/cpp/cppdefault.h,
	  support/cpp/prefix.c, support/cpp/except.h, support/cpp/hwint.h,
	  support/cpp/prefix.h, support/cpp/libiberty/safe-ctype.h,
	  support/cpp/libiberty/filenames.h, support/cpp/libiberty/xstrdup.c,
	  support/cpp/libiberty/md5.c, support/cpp/libiberty/obstack.h,
	  support/cpp/sdcpp.c, support/cpp/intl.h, support/cpp/sdcpp.h
	  support/cpp/libcpp/symtab.c, support/cpp/libcpp/directives.c,
	  support/cpp/libcpp/macro.c, support/cpp/libcpp/include/cpplib.h,
	  support/cpp/libcpp/include/symtab.h,
	  support/cpp/libcpp/include/line-map.h,
	  support/cpp/libcpp/include/cpp-id-data.h,
	  support/cpp/libcpp/include/mkdeps.h, support/cpp/libcpp/files.c,
	  support/cpp/libcpp/line-map.c, support/cpp/libcpp/init.c,
	  support/cpp/libcpp/identifiers.c, support/cpp/libcpp/ucnid.h,
	  support/cpp/libcpp/traditional.c, support/cpp/libcpp/errors.c,
	  support/cpp/libcpp/expr.c, support/cpp/libcpp/internal.h,
	  support/cpp/libcpp/mkdeps.c, support/cpp/libcpp/lex.c,
	  support/cpp/libcpp/system.h, support/cpp/libcpp/charset.c,
	  support/cpp/opts.h, support/cpp/sdcpp-opts.c:
	  SDCPP synchronized with GCC CPP release version 4.4.0.
	  SDCPP license changed to GPL version 3 or later.
